[package]
name = "maybe-regex"
version = "0.1.0"
edition = "2024"
description = "Wrapper for strings that may be either a regex or a plain-text string"
homepage = "https://github.com/loremdipso/maybe-regex"
readme = "README.md"
license = "MIT"
keywords = ["strings", "utility"]

[dependencies]
lazy_static = "1.5.0"
log = "0.4.27"
regex = "1.11.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
